--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,6 +2,8 @@
 # https://symfony.com/doc/current/service_container.html
 parameters:
     #parameter_name: value
+    twig.config:
+      debug: true
 
 services:
     # default configuration for services in *this* file
