--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,27 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
+# change according to OC course
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    # change according to OC course
     providers:
         in_memory:
-            memory: ~
+            memory:
+              users:
+                  ryan:
+                      password: ryanpass
+                      roles: 'ROLE_USER'
+                  admin:
+                      password: kitten
+                      roles:  'ROLE_ADMIN'
+
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -15,10 +31,17 @@ security:
 
         main:
             anonymous: ~
+            form_login:
+                            login_path: login
+                            check_path: login
             # activate different ways to authenticate
-
+            http_basic: ~
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
             #http_basic: ~
+    access_control:
+            # require ROLE_ADMIN for /admin*
+            - { path: '^/admin', roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: '^/', roles: ROLE_ADMIN }
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
