--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,25 +3,16 @@
 # change according to OC course
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        AppBundle\Entity\User: sha512
 
-    role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     # change according to OC course
     providers:
-        in_memory:
-            memory:
-              users:
-                  ryan:
-                      password: ryanpass
-                      roles: 'ROLE_USER'
-                  admin:
-                      password: kitten
-                      roles:  'ROLE_ADMIN'
-
+        database_user:
+            entity:
+                class: AppBundle:User
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -30,10 +21,14 @@ security:
             security: false
 
         main:
-            anonymous: ~
-            form_login:
-                            login_path: login
-                            check_path: login
+            pattern: ^/
+            anonymous: true
+            logout:
+                path: security_logout
+            guard:
+                authenticators:
+                    - AppBundle\Security\FormLoginAuthenticator
+
             # activate different ways to authenticate
             http_basic: ~
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
@@ -41,7 +36,7 @@ security:
     access_control:
             # require ROLE_ADMIN for /admin*
             - { path: '^/admin', roles: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: '^/', roles: ROLE_ADMIN }
+            - { path: '^/', roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
