--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -37,5 +37,11 @@ monolog:
         #    type: chromephp
         #    level: info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+swiftmailer:
+    transport: '%mailer_transport%'
+    host: '%mailer_host%'
+    username: '%mailer_user%'
+    password: '%mailer_password%'
+    delivery_addresses: ['reybeka.peyrat@gmail.com']
+
+
