--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -38,10 +38,10 @@ monolog:
         #    level: info
 
 swiftmailer:
-    transport: '%mailer_transport%'
+    transport: gmail
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-    delivery_addresses: ['reybeka.peyrat@gmail.com']
+    delivery_addresses: ['reybeka.dev@gmail.com']
 
 
